<resources>
    <string name="pdfCreate">Documento firmado exitosamente</string>
    <string name="form_error_correct">Favor de rellenar correctamente el formulario</string>
    <string name="form_email_correct">Introduzca un mail válido</string>
    <string name="date_minor">La fecha indica que es menor de edad</string>
    <string name="error_valid_field">Campo Obligatorio</string>
    <string name="lessthan9">Máximo 9 menores a cargo</string>
    <string name="loading">Cargando. Porfavor espere...</string>
    <string name="obligatory_field">Favor de responde los campos obligatorios</string>
    <string name="app_name">BoulderCorpRegistration</string>
    <string name="brand_title" translatable="false">BOULDER CORP</string>
    <string name="register_btn">Registrarse</string>
    <string name="slogan" translatable="false">Climbing</string>
    <string name="use_data">Aviso de Uso de Datos</string>
    <string name="aviso_datos">Aviso de Uso de Datos</string>
    <string name="welcome_head">Recomendaciones Bouldereras</string>
    <string name="welcome">Bienvenid@</string>
    <string name="txt_bienvenida">En BOULDER CORP queremos que te sientas como en casa, cualquier duda o inquietud que tengas, acercarte a nuestro personal... ¡Estamos para servirte!</string>
    <string name="check_politicas">He leído y estoy de acuerdo con las </string>
    <string name="reglamentoOk">Estoy de acuerdo y me comprometo a seguir con el reglamento/recomendaciones de BOULDER CORP.</string>
    <string name="form_title">Registro</string>
    <string name="enter_name_hint">Escriba su nombre(s)</string>
    <string name="enter_lastanme">Escriba sus apellidos</string>
    <string name="enter_id_number">Escriba ID oficial</string>
    <string name="fecha_nac">Fecha de nacimiento</string>
    <string name="enter_email">Escriba su mail</string>
    <string name="enter_birth_date">INSERTAR FECHA DE CUMPLEAÑOS</string>
    <string name="form_title_1">INTRODUZCA SUS DATOS PERSONALES</string>
    <string name="form_title_2">REGISTRO A MENORES DE EDAD</string>
    <string name="form_title_3">¿A QUIEN PODEMOS LLAMAR EN CASO DE EMERGENCIA?</string>
    <string name="resp_enfants">¿Está a cargo de algún menor?</string>
    <string name="childs_names"><font size="12">Nombre completo del menor</font></string>
    <string name="parient_hint">Nombre del Amigo/Pariente</string>
    <string name="cell_num">Número celular</string>
    <string name="reg_menor">Registro menores de edad</string>
    <string name="form_sign">Firmar</string>
    <string name="thanks">¡Gracias!</string>
    <string name="final_btn">Finalizar</string>
    <string name="goodbye_txt">Esperamos que disfrutes de tu escalada... ¡Buenos Pegues!</string>
    <string name="btn_continue">Continuar</string>
    <string name="action_btn_text" translatable="false">BC</string>
    <string name="introduceFirma">Introduce tu firma</string>
    <string name="sign">Firmar</string>
    <string name="clear">Borrar</string>
    <string-array name="contract_1">
        <item name="contract_title_1">DESLINDE</item>
        <item>declaro voluntaria, libre y espontáneamente, que deseo usar todas y cada una de las instalaciones
        del Gimnasio de escalada de BOULDER CORP y / o participar en otras
        actividades en cualquier lugar, ya sea en el interior o al aire libre, que estén patrocinadas
        por o involucren a BOULDER CORP climbing. En consideración a  BOULDER CORP climbing que me
        permite usar la Instalación y / o permitirme participar en actividades, he acordado ejecutar
        este Acuerdo de Liberación de Responsabilidad, Asunción de Riesgo, Indemnización y
        Participación (el "Deslinde").</item>
        <item>De mi parte, de mis familiares, administradores y representantes legales
        declaro que <u>soy física y mentalmente capaz</u> de participar en todas las actividades de escalada de BOULDER CORP. y hago cesión de lo siguiente:</item>
        <item>De igual manera declaro que estoy de acuerdo con las polticas de privacidad y de uso de imagen de Boulder Corp. </item>
    </string-array>
    <string-array name="contract_2">
        <item name="contract_title_2">RECONOCIMIENTO DE RIESGOS</item>
        <item>Reconozco que la escalada en roca y/o boulder ya sea en interiores y / o
        al aire libre es peligrosa, incluidos, entre otros, los peligros asociados con escalar,
        descender, caer y “espotear”. Entiendo que ninguna cantidad de cuidado, precaución,
        instrucción o experiencia puede eliminar los peligros asociados con estas y otras
        actividades relacionadas.</item>
        <item name="p_2_d">Reconozco los peligros de escalar, que incluyen, entre otros,
            caídas debido a equipo colocado incorrectamente, equipo o material suelto o que se cae;
            caer debido al movimiento repentino de agarres o agarres en mal estado;
            actos de otros participantes;
            ser golpeado por personas, equipo o escombros que caen;
            o caer sobre otra persona, repisa u otra protuberancia.</item>
        <item name="p_2_e">Entiendo que el equipo de escalada, instalaciones o agarres pueden resultar dañados o defectuosos. Si se daña algún agarre o parte de la instalación BOULDER CORP climbing mientras lo estoy usando, se lo comunicaré al personal de BOULDER CORP climbing a cargo para que evalúen el daño.</item>
        <item name="p_2_f">He leído y acepto cumplir con las reglas que se enumeran a continuación en esta exención, así como con otras reglas que pueden estar publicadas en todas las instalaciones o sitios de escalada.</item>
        <item name="p_2_g">Reconozco que cualquier instrucción de escalada que pueda recibir de las Partes eximidas es de naturaleza general y puede que no se aplique a todas las condiciones de escalada. Entiendo que cualquier instrucción que reciba no me prepara para escalar sin supervisión.</item>
    </string-array>
    <string-array name="contract_3">
        <item name="contract_title_3">REGLAS BOULDERERAS</item>
        <item name="p_3_a">Todos deben registrarse en la recepción y pasar por una orientación antes de usar las instalaciones si así lo desean.</item>
        <item name="p_3_b">Todos deben firmar un deslinde de exención de responsabilidad. Cualquier persona menor de 18 años debe tener la exención de responsabilidad firmada por un padre o tutor legal.</item>
        <item name="p_3_c">Al escalar, se recomienda un mínimo de una persona por escalador para ayudar a “espotear” o redirigir a un escalador que cae. Los escaladores reconocen que el Boulder es muy peligroso. Es posible que el uso de un observador no evite lesiones. Los observadores comprenden que pueden lesionarse al "espotear" o redirigir a un escalador que cae.</item>
        <item name="p_3_d">Los padres y tutores legales de los huéspedes menores de 13 años deben supervisar directamente a sus hijos / invitados en todo momento.</item>
        <item name="p_3_e">No trepe por encima de la estructura del muro de escalada. Solo los miembros del personal pueden estar detrás del muro de escalada.</item>
        <item name="p_3_f">No se permiten artículos personales en superficies acolchadas. Las botellas de agua, bolsas, etc., deben almacenarse en los cubículos otorgados por BOULDER CORP climbing.</item>
        <item name="p_3_g">BOULDER CORP climbing no es responsable por artículos perdidos o robados.</item>
        <item name="p_3_h">No se permite escalar bajo la influencia de sustancias intoxicantes o controladas, incluido el alcohol o las drogas de cualquier tipo, independientemente de si fueron recetadas por un médico o no.</item>
        <item name="p_3_i">Nos reservamos el derecho de agregar a la lista anterior lo que consideremos apropiado en un esfuerzo por brindar un ambiente seguro para nuestros clientes.</item>
    </string-array>
    <string-array name="contract_4">
        <item name="contract_title_4">ASUNCIÓN DE RIESGO Y LIBERACIÓN DE RESPONSABILIDAD</item>
        <item name="p_4_a">De sufrir cualquier tipo de lesión, daño o accidente, lo haré del conocimiento de BOULDER CORP Climbing.
            De requerir atención médica, sin responsabilidad alguna del gimnasio BOULDER CORP Climbing, acepto que se me apliquen primeros auxilios y en caso de ser necesario me trasladen a un centro hospitalario
            y que los gastos que llegasen a generarse serán cubiertos es su totalidad por el suscrito. </item>
        <item name="p_4_b">ASUMO EXPRESAMENTE TODOS LOS RIESGOS CONOCIDOS Y DESCONOCIDOS ASOCIADOS CON MI PARTICIPACIÓN O
            EL USO DE CUALQUIERA Y TODAS LAS INSTALACIONES O ACTIVIDADES, INCLUYENDO LOS RIESGOS DE LESIONES, PARÁLISIS O MUERTE. MI PARTICIPACIÓN Y USO ES PURAMENTE VOLUNTARIO Y ELIJO HACERLO A PESAR DE LOS RIESGOS. ACEPTO LIBERAR PARA SIEMPRE A BOULDER CORP CLIMBING Y A CUALQUIERA DE SUS RESPECTIVOS MIEMBROS, FUNCIONARIOS, DIRECTORES, EMPLEADOS, AGENTES, REPRESENTANTES, ACCIONISTAS, ASÍ COMO CUALQUIER OTRA PERSONA, CORPORACIÓN, PROPIETARIOS Y PROPIETARIOS, DE Y CONTRA TODOS LOS DAÑOS, ACCIONES, RECLAMOS Y RESPONSABILIDADES, SEAN CONOCIDOS O DESCONOCIDOS, ANTICIPADOS, SOSPECHADOS O NO SOSTENIDOS, RELACIONADOS CON CUALQUIER ACTIVIDAD O EVOLUCIÓN DE EVOLUCIÓN O DERIVADOS DE BOULDER CORP CLIMBING O CUALQUIERA DE LAS PARTES LIBERADAS.</item>
    </string-array>
    <string-array name="contract_6">
        <item name="contract_title_6">ACUERDO DE INDEMNIZACIÓN</item>
        <item name="p_6_b">Acepto que esta responsiva continuará vigente a perpetuidad o hasta que se cancele o modifique mediante acuerdo escrito, de modo que cada vez que use las instalaciones o participe en cualquier actividad, esta carta responsiva se mantendrá en vigencia.</item>
        <item name="p_6_c">Si el participante es un menor: Declaro ser el padre o tutor legal del menor mencionado en esta carta y doy mi consentimiento para que utilice las instalaciones y/o participe en actividades dentro de las mismas. En consideración a BOULDER CORP Climbing que permite que el menor mencionado participe en actividades y/o use la instalación, reconozco que estoy familiarizado con, y acepto estar sujeto a los términos y condiciones del presente acuerdo. Yo, en mi nombre y del menor mencionado en al presente, acepto renunciar, liberar, indemnizar y eximir de responsabilidad a BOULDER CORP Climbing de y de todas las reclamaciones, deudas, gastos, demandas, daños y responsabilidades de todo tipo y naturaleza, conocidos o desconocidos, en derecho o equidad, que dicho menor tenga o pueda tener, que surjan o de alguna manera estén relacionados con la participación del mismo en actividades relacionadas con BOULDER CORP Climbing. Además, acepto indemnizar, mantener indemne y defender a BOULDER CORP Climbing de y en contra de cualquier pérdida, daño, responsabilidad, gasto, costo y/o honorarios de abogados, incluyendo cualquiera de los presentados por, en nombre de, relacionados o causados de cualquier otro modo por el menor mencionado en la presente.</item>
        <item name="p_6_d">Declaro que los datos personales proporcionados en la solicitud son fidedignos.</item>
        <item name="p_6_e">ADVERTENCIA: Una persona que falsifique su firma a continuación o tergiversa la capacidad (como padre o tutor legal, por ejemplo) en la que firma se considerará FALSIFICADOR y, además de otras sanciones civiles y penales, se considerará que ha aceptado indemnizar a las Partes Exoneradas de y contra cualquier reclamo de pérdida afirmado por o en nombre de una persona cuya visita al gimnasio fue facilitada por esa falsificación.</item>
        <item name="p_6_f">HE LEÍDO DETENIDAMENTE ESTE ACUERDO Y ENTIENDO COMPLETAMENTE SU CONTENIDO E IMPLICACIONES.</item>
    </string-array>
    <string name="politicas"> Políticas de Privacidad</string>
    <string name="aceptar">Aceptar</string>
</resources>