<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/padding_regular"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="126dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_regular"
            android:text="@string/introduceFirma"
            android:textColor="@color/grey"/>

        <LinearLayout
            android:id="@+id/drawLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:background="@color/black"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/clearBtn33"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/black"
                android:text="@string/clear"
                />
            <Button
                android:id="@+id/saveBtn33"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/black"
                android:text="@string/sign"
                />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>